Correct slides spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -71,11 +71,11 @@ h1 strong, h2 strong, h3 strong {font-family:'HelveticaNeueLTPro75Bold'; white-s
 .slide-parent {padding:1px 0; position: relative; z-index: 0;} 
 .slide-parent .anchor {position: absolute; top: 0px; right: 50%;}
 .slide {padding: 10px 0;}
-.slide-inner {width: 800px; margin: 0px auto;} 
+.slide-inner {width: 850px; margin: 0px auto;} 
 .slide h1 {font-family: "NeoSansProLight"; font-size: 30px; margin-bottom: 25px; color: #7e7e7e;}
 
 /*Features*/
-.feature {padding-left: 120px; width: 280px; height: 170px; float: left; color: #767676;}
+.feature {padding-left: 120px; padding-right: 20px; width: 280px; height: 170px; float: left; color: #767676;}
 .feature h2 {margin-top: 0; color: #2e2e2e; font-family: "NeoSansProBlack"; font-size: 24px; text-transform: uppercase;}
 .automatic {background: url(../images/features_icon3.png) no-repeat;}
 .up-to-date {background: url(../images/features_icon2.png) no-repeat;}
